# remote-viewer

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  libtool  mingw-virt-viewer.spec  virt-viewer.spec
data/: Makefile  Makefile.in  virt-viewer-debug.nsis  virt-viewer.nsis  virt-viewer.wxs
icons/: Makefile  Makefile.in
icons/16x16/: Makefile  Makefile.in
icons/22x22/: Makefile  Makefile.in
icons/24x24/: Makefile  Makefile.am  Makefile.in
icons/256x256/: Makefile  Makefile.in
icons/32x32/: Makefile  Makefile.in
icons/48x48/: Makefile  Makefile.in
man/: Makefile  Makefile.in
po/: .intltool-merge-cache  Makefile  Makefile.in  POTFILES  ach.gmo  ach.po  af.gmo  af.po  aln.gmo  aln.po  am.gmo  am.po  ar.gmo  ar.po  as.gmo  as.po  ast.gmo  ast.po  az.gmo  az.po  bal.gmo  bal.po  be.gmo  be.po  bg.gmo  bg.po  bn.gmo  bn.po  bn_IN.gmo  bn_IN.po  bo.gmo  bo.po  br.gmo  br.po  brx.gmo  brx.po  bs.gmo  bs.po  ca.gmo  ca.po  (+181 more)
si/: virt-viewer-2.0.IAB  virt-viewer-2.0.IAD  virt-viewer-2.0.IMB  virt-viewer-2.0.IMD  virt-viewer-2.0.PFI  virt-viewer-2.0.PO  virt-viewer-2.0.PR  virt-viewer-2.0.PRI  virt-viewer-2.0.PS  virt-viewer-2.0.SearchResults  virt-viewer-2.0.WK3
src/: Makefile  Makefile.in  remote-viewer  remote-viewer-main.c  remote-viewer.c  remote-viewer.h  virt-viewer-app.c  virt-viewer-display-spice.c  virt-viewer-session-spice.c  virt-viewer-session-spice.h  virt-viewer-session.c  virt-viewer-session.h  virt-viewer-window.c  virt-viewer-window.h  virt-viewer.h  virt-viewer.rc
(+18 files in other folders)
