EXTRA_DIST =
size = $(notdir $(PWD))

apps_icondir = $(datadir)/icons/hicolor/$(size)/apps/
apps_icon_DATA = $(PACKAGE).png tclient-1.png PC-vdi-1.png exit-vdi-1.png mouse-mode-1.png power-off-vdi-1.png send-alt-1.png usb-redir-1.png gtk-cancel.png close-vdi.png window-vdi.png gtk-close.png
EXTRA_DIST += $(apps_icon_DATA)

devices_icondir = $(datadir)/icons/hicolor/$(size)/devices/
devices_icon_DATA = virt-viewer-usb.png virt-viewer-usb.svg
EXTRA_DIST += $(devices_icon_DATA)

-include $(top_srcdir)/git.mk
