EXTRA_DIST =
size = $(notdir $(PWD))

apps_icondir = $(datadir)/icons/hicolor/$(size)/apps/
apps_icon_DATA = $(PACKAGE).png rtclient-1.png rPC-vdi-1.png rexit-vdi-1.png rmouse-mode-1.png rpower-off-vdi-1.png rsend-alt-1.png rusb-redir-1.png rgtk-cancel.png rclose-vdi.png rwindow-vdi.png rgtk-close.png
EXTRA_DIST += $(apps_icon_DATA)

devices_icondir = $(datadir)/icons/hicolor/$(size)/devices/
devices_icon_DATA = virt-viewer-usb.png virt-viewer-usb.svg
EXTRA_DIST += $(devices_icon_DATA)

-include $(top_srcdir)/git.mk
